<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vapeplanner.qrcodeproject.QrCodeScanner"
    android:orientation="vertical"
    android:id="@+id/mainLinearLayout"
    android:background="@color/backgroundColor"
    >

    <Toolbar
        android:id="@+id/codeScannerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        >
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvScannerTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qrContentType"
            android:gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:id="@+id/ivScannerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_type_plain_text"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qrContent"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryLight"
            />

        <TextView
            android:id="@+id/qrContentPlainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qrContentPlainText"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"
            android:padding="12dp"
            android:elevation="5dp"
            android:maxLines="5"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnScannerAction"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLight"
            android:text="@string/btnScannerAction"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>
