<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vapeplanner.qrcodeproject.QrCodeGenerator"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:id="@+id/relativeLayout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:id="@+id/codeGeneratorToolbar"
        >
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>

    <EditText
        android:id="@+id/etQrContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/codeGeneratorToolbar"
        android:layout_margin="30dp"
        android:textSize="12dp"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:hint="@string/etQrContent"
        />

    <Button
        android:id="@+id/qrContentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etQrContent"
        android:layout_centerHorizontal="true"
        android:text="@string/qrContentButton"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_light"
        />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/qrContentButton"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/ivCodeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_margin="30dp"
        android:background="@color/secondaryBackground"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_below="@id/view2"
        android:orientation="horizontal"
        android:gravity="bottom|right"
        >

        <ImageView
            android:id="@+id/saveQrCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/saveQrCodeButton"
            android:textColor="@android:color/white"
            android:src="@drawable/ic_download_code_btn"
            />

        <ImageView
            android:id="@+id/shareQrCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/shareQrCodeButton"
            android:textColor="@android:color/white"
            android:src="@drawable/ic_share_code_btn"
            />

    </LinearLayout>


</RelativeLayout>
